# general_gacha_simulator

./: .coverage  .gitignore  CLAUDE.md  CONTRIBUTING.md  GachaStat.spec  README.md  benchmark_chart.py  modification_plan.md  profile_gui.py  profile_sim.py  profile_simulation.py  project.md  pyproject.toml  results.json  test_cdn.html  test_matplotlib_qt.py  test_plotly_webengine.py  test_webengine_basic.py  worst_impact.py  项目交接.md
.claude/: settings.local.json
.claude/hooks/: check_commit_msg.py  check_doc_rot.py  common.py  fast_gate.py  inject_state.py  log_change.py  push_gate.py  safety_gate.py  save_context.py  sync_version.py
.claude/workflows/: plan-review.workflow.js
docs/: 2.8_worker_global_variable_elimination_plan.md  HANDOVER.md  Plotly图表迁移实施方案.md  Worker全局变量消除方案.md  implementation_plan.md  strategy_code_investigation_and_refactoring_plan.md  手动验收项目清单.md  搁置计划记录.md  最差后期影响调查报告.md  架构设计.md  模拟性能优化方案.md  计划汇总.md  面板合并可行性计划.md  项目条目实施计划与调查报告.md
docs/00-meta/: 全局约定.md  技术栈.md  搁置计划记录.md  术语表.md  模块状态矩阵.md  验收清单.md
docs/01-活跃/: 00-本周聚焦.md
docs/02-待办/: P38 计划审查工作流——对抗验证流水线设计.md  P39 Harness工程——Anthropic三层自治架构建造计划.md  调试模式.md  面板合并.md
docs/05-参考资料/: monte_carlo_policy_comparison_guide.md  面板聚合项目文档架构提示词.md
docs/archive/: modification_plan.md
docs/superpowers/: PLAN_SUMMARY.md
gacha_simulator/: _version.py  cli.py  main.py  paths.py  run.py
gacha_simulator/config/: gains.txt  initial_resources.txt  pity.txt  schedule.txt  targets.txt
gacha_simulator/core/: __init__.py  action.py  (+32 more)
gacha_simulator_backup_20260521_032308/: _version.py  main.py
(+365 files in other folders)
