[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gacha_simulator"
version = "1.6.0"
description = "GachaStat — A flexible gacha simulation and statistical analysis system"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.0",
    "numpy>=1.20",
    "matplotlib>=3.5",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
